[gd_scene load_steps=33 format=3 uid="uid://7188haek1n73"]

[ext_resource type="Script" path="res://scripts/player/Player.gd" id="1_hldcd"]
[ext_resource type="Script" path="res://scripts/player/Interacter.gd" id="2_0yxy6"]
[ext_resource type="Script" path="res://scripts/player/PlayerInput.gd" id="2_myobr"]
[ext_resource type="PackedScene" uid="uid://chnb7t2mpka4m" path="res://art/bean_armature.glb" id="2_ow32s"]
[ext_resource type="Texture2D" uid="uid://c7q1fhjg15ufq" path="res://art/WhiteSquare.png" id="3_isc5x"]
[ext_resource type="Material" uid="uid://bcara7emet014" path="res://materials/player-mat.tres" id="3_wtvyi"]
[ext_resource type="FontFile" uid="uid://6j5xf6n7lhb4" path="res://fonts/Kenney High Square.ttf" id="4_a77o5"]
[ext_resource type="Theme" uid="uid://po0l0sihtw6n" path="res://resources/my_theme.tres" id="6_h27ep"]
[ext_resource type="Texture2D" uid="uid://baik0cjespmin" path="res://art/icons/run.svg" id="6_u41ad"]
[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="7_miwrk"]
[ext_resource type="Texture2D" uid="uid://dronyf43vs2pg" path="res://art/icons/oxygen.svg" id="7_qomcv"]
[ext_resource type="Texture2D" uid="uid://7uawfbno32qj" path="res://art/icons/heart.svg" id="8_iutcd"]
[ext_resource type="Texture2D" uid="uid://cu247nl3sgojg" path="res://art/icons/white-circle.svg" id="9_iypvg"]
[ext_resource type="Script" path="res://scripts/player/Stamina.gd" id="10_40wdu"]
[ext_resource type="Script" path="res://scripts/player/Oxygen.gd" id="10_bisgl"]
[ext_resource type="Script" path="res://scripts/player/Health.gd" id="12_m4y5c"]
[ext_resource type="Texture2D" uid="uid://batndxv36dmhy" path="res://art/icons/galaxy.svg" id="12_xu87k"]
[ext_resource type="Texture2D" uid="uid://dos6a5s68jvuk" path="res://art/icons/planet.svg" id="13_qlb2x"]
[ext_resource type="Texture2D" uid="uid://jnknb38pntha" path="res://art/icons/time.svg" id="14_i6bop"]

[sub_resource type="Animation" id="Animation_2yhjd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bean_armature:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_47207"]
resource_name = "walking"
length = 0.35
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bean_armature:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.14, 0.35),
"transitions": PackedFloat32Array(0.5, 2, 0.5),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.089, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3fpg0"]
_data = {
"RESET": SubResource("Animation_2yhjd"),
"walking": SubResource("Animation_47207")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_368e4"]
radius = 0.1165
height = 0.466

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_on7c2"]
radius = 0.1165
height = 0.233

[sub_resource type="BoxShape3D" id="BoxShape3D_iaoc7"]
size = Vector3(0.303162, 0.381287, 0.267822)

[sub_resource type="LabelSettings" id="LabelSettings_w7x1j"]
font_size = 36
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="Gradient" id="Gradient_ct3oo"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.237705)
colors = PackedColorArray(0.881937, 0.881937, 0.881936, 1, 0.912289, 0.912289, 0.912289, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_2s37i"]
gradient = SubResource("Gradient_ct3oo")
width = 23

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nr2nu"]
texture = SubResource("GradientTexture1D_2s37i")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="LabelSettings" id="LabelSettings_5elvw"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2p3bo"]
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_23l6a"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:velocity")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("PlayerInput:neck_look")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:rotation:y")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("bean_armature:scale")
properties/4/spawn = true
properties/4/replication_mode = 0

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 9
floor_max_angle = 1.0472
platform_floor_layers = 4294967049
platform_wall_layers = 1
script = ExtResource("1_hldcd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3fpg0")
}

[node name="bean_armature" parent="." instance=ExtResource("2_ow32s")]

[node name="Skeleton3D" parent="bean_armature/Armature" index="0"]
bones/0/rotation = Quaternion(0, 1, 0, -1.94707e-07)

[node name="Body" parent="bean_armature/Armature/Skeleton3D" index="0"]
surface_material_override/0 = ExtResource("3_wtvyi")

[node name="Eyes" parent="bean_armature/Armature/Skeleton3D" index="1"]
cast_shadow = 0

[node name="DisplayName" type="Label3D" parent="bean_armature"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.542016, 0)
billboard = 2
double_sided = false
text = "Name"
font = ExtResource("4_a77o5")
font_size = 24
outline_size = 6

[node name="WalkingCollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.219174, 0)
shape = SubResource("CapsuleShape3D_368e4")

[node name="WalkingCameraPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.363378, -0.131)

[node name="CrouchingCollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.102861, 0)
shape = SubResource("CapsuleShape3D_on7c2")
disabled = true

[node name="CrouchCameraPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.178, -0.131)

[node name="MovingObjectDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0388305, 0)
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="MovingObjectDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00790405, 0.309357, -0.0032959)
shape = SubResource("BoxShape3D_iaoc7")

[node name="Holder" type="RemoteTransform3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0.00463852, 0.041026, -0.278765)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.363378, -0.0989672)
fov = 80.0
near = 0.01

[node name="Interacter" type="RayCast3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00148126, 0.054469)
target_position = Vector3(0, 0, -1)
collision_mask = 5
hit_from_inside = true
collide_with_areas = true
script = ExtResource("2_0yxy6")

[node name="AntiClipWallRaycast3D" type="RayCast3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.208298)
target_position = Vector3(0, 0, -0.4)
collision_mask = 9
hit_from_inside = true

[node name="HUD" type="Control" parent="Camera3D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("6_h27ep")
script = ExtResource("7_miwrk")

[node name="Reticle" type="TextureRect" parent="Camera3D/HUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_isc5x")
expand_mode = 1

[node name="InteractLabel" type="Label" parent="Camera3D/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 108.0
offset_right = 20.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(120, 16)
text = "[E] to Interact"
label_settings = SubResource("LabelSettings_w7x1j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaminaProgressBar" type="TextureProgressBar" parent="Camera3D/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 110.0
offset_top = -141.0
offset_right = 291.0
offset_bottom = -7.0
grow_vertical = 0
scale = Vector2(0.2, 0.8)
step = 0.1
value = 100.0
fill_mode = 3
texture_under = ExtResource("3_isc5x")
texture_progress = ExtResource("3_isc5x")
tint_under = Color(0.160784, 0.160784, 0.160784, 0.270588)
tint_progress = Color(0, 0.74902, 0, 1)

[node name="TextureRect" type="TextureRect" parent="Camera3D/HUD/StaminaProgressBar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.5001
offset_top = 4.0
offset_right = -6.50006
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.2, 0.5)
texture = ExtResource("6_u41ad")

[node name="OxygenProgressBar" type="TextureProgressBar" parent="Camera3D/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 61.0
offset_top = -141.0
offset_right = 242.0
offset_bottom = -7.0
grow_vertical = 0
scale = Vector2(0.2, 0.8)
step = 0.1
value = 100.0
fill_mode = 3
texture_under = ExtResource("3_isc5x")
texture_progress = ExtResource("3_isc5x")
tint_under = Color(0.160784, 0.160784, 0.160784, 0.270588)
tint_progress = Color(0, 0.65098, 1, 1)

[node name="TextureRect" type="TextureRect" parent="Camera3D/HUD/OxygenProgressBar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.5001
offset_top = 4.0
offset_right = -6.50006
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.2, 0.5)
texture = ExtResource("7_qomcv")
expand_mode = 2

[node name="HealthProgressBar" type="TextureProgressBar" parent="Camera3D/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -141.0
offset_right = 196.0
offset_bottom = -7.0
grow_vertical = 0
scale = Vector2(0.200001, 0.8)
step = 0.1
value = 100.0
fill_mode = 3
texture_under = ExtResource("3_isc5x")
texture_progress = ExtResource("3_isc5x")
tint_under = Color(0.160784, 0.160784, 0.160784, 0.270588)
tint_progress = Color(0.945098, 0.380392, 0.686275, 1)

[node name="TextureRect" type="TextureRect" parent="Camera3D/HUD/HealthProgressBar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.5001
offset_top = 4.0
offset_right = -6.50006
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.2, 0.5)
texture = ExtResource("8_iutcd")
expand_mode = 2

[node name="InteractProgressBar" type="TextureProgressBar" parent="Camera3D/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 1.0
fill_mode = 4
texture_under = ExtResource("9_iypvg")
texture_progress = ExtResource("9_iypvg")
tint_under = Color(0.286275, 0.286275, 0.286275, 1)
tint_progress = Color(0, 0.905882, 0.964706, 1)

[node name="PackageLabel" type="PanelContainer" parent="Camera3D/HUD"]
texture_repeat = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -240.0
offset_top = 17.0
offset_right = -20.0
offset_bottom = 365.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_nr2nu")

[node name="MarginContainer" type="MarginContainer" parent="Camera3D/HUD/PackageLabel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Camera3D/HUD/PackageLabel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Camera3D/HUD/PackageLabel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Package"
label_settings = SubResource("LabelSettings_5elvw")
horizontal_alignment = 1

[node name="Recipient" type="TextureRect" parent="Camera3D/HUD/PackageLabel/MarginContainer/VBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("6_u41ad")
stretch_mode = 2

[node name="Label" type="Label" parent="Camera3D/HUD/PackageLabel/MarginContainer/VBoxContainer/Recipient"]
layout_mode = 2
offset_left = 65.0
offset_top = 17.0
offset_right = 193.0
offset_bottom = 38.0
grow_horizontal = 0
grow_vertical = 2
text = "Glorbo"
label_settings = SubResource("LabelSettings_2p3bo")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Galaxy" type="TextureRect" parent="Camera3D/HUD/PackageLabel/MarginContainer/VBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("12_xu87k")
stretch_mode = 2

[node name="Label" type="Label" parent="Camera3D/HUD/PackageLabel/MarginContainer/VBoxContainer/Galaxy"]
layout_mode = 2
offset_left = 65.0
offset_top = 17.0
offset_right = 193.0
offset_bottom = 38.0
grow_horizontal = 0
grow_vertical = 2
text = "Galaxy-5456456"
label_settings = SubResource("LabelSettings_2p3bo")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Planet" type="TextureRect" parent="Camera3D/HUD/PackageLabel/MarginContainer/VBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("13_qlb2x")
stretch_mode = 2

[node name="Label" type="Label" parent="Camera3D/HUD/PackageLabel/MarginContainer/VBoxContainer/Planet"]
layout_mode = 2
offset_left = 65.0
offset_top = 17.0
offset_right = 193.0
offset_bottom = 38.0
grow_horizontal = 0
grow_vertical = 2
text = "Planet-5456456"
label_settings = SubResource("LabelSettings_2p3bo")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Time" type="TextureRect" parent="Camera3D/HUD/PackageLabel/MarginContainer/VBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("14_i6bop")
stretch_mode = 2

[node name="Label" type="Label" parent="Camera3D/HUD/PackageLabel/MarginContainer/VBoxContainer/Time"]
layout_mode = 2
offset_left = 65.0
offset_top = 17.0
offset_right = 193.0
offset_bottom = 38.0
grow_horizontal = 0
grow_vertical = 2
text = "3 days"
label_settings = SubResource("LabelSettings_2p3bo")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_23l6a")
visibility_update_mode = 1

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("2_myobr")

[node name="Stats" type="Node" parent="."]

[node name="Oxygen" type="Node" parent="Stats" node_paths=PackedStringArray("visual_bar")]
script = ExtResource("10_bisgl")
visual_bar = NodePath("../../Camera3D/HUD/OxygenProgressBar")

[node name="Stamina" type="Node" parent="Stats" node_paths=PackedStringArray("visual_bar")]
script = ExtResource("10_40wdu")
visual_bar = NodePath("../../Camera3D/HUD/StaminaProgressBar")

[node name="Health" type="Node" parent="Stats" node_paths=PackedStringArray("visual_bar")]
script = ExtResource("12_m4y5c")
visual_bar = NodePath("../../Camera3D/HUD/HealthProgressBar")

[connection signal="body_entered" from="MovingObjectDetector" to="." method="_on_moving_object_detector_body_entered"]
[connection signal="body_exited" from="MovingObjectDetector" to="." method="_on_moving_object_detector_body_exited"]
[connection signal="synchronized" from="MultiplayerSynchronizer" to="." method="_on_multiplayer_synchronizer_synchronized"]

[editable path="bean_armature"]
